# baikal-t-recovery-image-info

./: Makefile.am  Makefile.in  configure  configure.ac  recovery-image-info.1
src/: Makefile.am  Makefile.in  cksum_memcrc.c  cksum_memcrc.h  config.h.in  recovery-image-info.c  recovery-image-info.h
